{
    "name": "GalInput",
    "maps": [
        {
            "name": "General",
            "id": "0c3cfe70-1638-461a-8359-c45634ecfc1b",
            "actions": [
                {
                    "name": "Next",
                    "type": "Button",
                    "id": "1b48260c-8af0-4a87-9ac0-0903099a05a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CGmode",
                    "type": "Button",
                    "id": "491218af-84c5-4fb8-876a-d8bb8b4b6623",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Auto",
                    "type": "Button",
                    "id": "0d845e2d-efb0-4c62-8605-723bde02659d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skip",
                    "type": "Button",
                    "id": "895bda2d-23ba-48a0-9d75-773a42a636c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HistoryBack",
                    "type": "Button",
                    "id": "02fe08e3-ebd2-41db-9b02-d4fc93b0869a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HistoryForward",
                    "type": "Button",
                    "id": "e250c1ea-4061-4feb-8683-f6734c9fc887",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HistoryLogs",
                    "type": "Button",
                    "id": "2c790194-f408-4407-89d9-2fe994c35425",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a80e6bac-8932-4244-b14b-29908454a4da",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Next",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35fffa2b-ea7a-4b2c-bf72-01a0b20bc2dd",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Next",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c88399b3-503c-4b78-a0a1-89aa634b9a3f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CGmode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df337795-d9be-491d-92a5-74be25b96fe0",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Auto",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48b1cf35-2cd9-4be5-8aee-192f17e98c0f",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83b28cb3-2bff-4029-b1f4-8727a045329a",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HistoryBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6bdae512-33bd-4fdf-852c-611c113ece08",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HistoryForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a571029-1f1c-4f51-80c9-6333ebcf90ee",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HistoryLogs",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}